Fix tooltip overflowing on small screens

--- a/assets/css/tooltip.css
+++ b/assets/css/tooltip.css
@@ -2,6 +2,7 @@
 .tooltip {
     box-sizing: border-box;
     max-width: 91%;
+    max-height: 75%;
     width: 100%;
 
     padding: 2rem 3.4rem 2rem 2.4rem;
@@ -20,8 +21,8 @@
     z-index: 100;
     opacity: 0;
     position: absolute;
-    bottom: 15px;
-    left: 18px;
+    bottom: 1rem;
+    left: 1rem;
 
     transition: opacity 0.5s ease-in-out;
 }
@@ -110,3 +111,5 @@
     -webkit-line-clamp: 4;
     line-clamp: 4;
 }
+
+
